# args_parse_lab1

./: .gitignore  CMakeLists.txt  README.md
args/: CMakeLists.txt  arg.cpp  arg.hpp  boolArg.cpp  boolArg.hpp  emptyArg.cpp  emptyArg.hpp  fwd_decl.hpp  intArg.cpp  intArg.hpp  stringArg.cpp  stringArg.hpp  valueArg.cpp  valueArg.hpp
args_parse/: CMakeLists.txt  arg.cpp  arg.hpp  boolArg.cpp  intArg.cpp  parcer.cpp  parcer.hpp  parser.cpp  parser.hpp  parserService.cpp  parserService.hpp  stringArg.cpp  validator.hpp  vectorService.cpp  vectorService.hpp
demo/: CMakeLists.txt  main.cpp  userDemoArg.cpp  userDemoArg.hpp
folderparser/: CMakeLists.txt  catalogTree.cpp  catalogTree.hpp  main.cpp  threadPool.hpp  threadpool.cpp
multy_args/: CMakeLists.txt  multyBoolArg.cpp  multyBoolArg.hpp  multyEmptyArg.cpp  multyEmptyArg.hpp  multyIntArg.cpp  multyIntArg.hpp  multyStringArg.cpp  multyStringArg.hpp
test/: CMakeLists.txt  main.cpp  testUtils.cpp  testUtils.hpp
types/: CMakeLists.txt  result.hpp
